// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Markdown Document > should synthesize a basic document 1`] = `
"# Test

## Table of Contents
"
`;

exports[`Markdown Document > should synthesize a document after adding a custom section with a sub-section 1`] = `
"# Test

## Table of Contents

- [Root Section](#root-section)
  - [Sub Section](#sub-section)

## Root Section

Some markdown content

### Sub Section

Some markdown sub content

Some more markdown sub content"
`;

exports[`Markdown Document > should synthesize a document after adding a custom section with a sub-section 2`] = `
"# Test

## Table of Contents

- [Acknowledgements](#acknowledgements)

## Acknowledgements

- [Some more markdown sub content](http://example.com)

- [Some more markdown sub content](http://example.com)"
`;

exports[`Markdown Document > should synthesize a document after adding a custom section with a sub-section 2 1`] = `
"# Test

## Table of Contents

- [Root Section](#root-section)
  - [Authors](#authors)

## Root Section

Some markdown content

### Authors

- [@jane-doe](https://www.github.com/jane-doe)

- [@john-smith](https://www.github.com/john-smith)"
`;

exports[`Markdown Document > should synthesize a document after adding a section 1`] = `
"# Test

## Table of Contents

- [Roadmap](#roadmap)

## Roadmap

- Item 1"
`;

exports[`Markdown Document > should write a document to disk 1`] = `
"# Test

## Table of Contents
"
`;
